--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,16 @@
-# Compiled class file
-*.class
+/target
+/.m2
 
-# Log file
-*.log
 
-# BlueJ files
-*.ctxt
+/.classpath
+/.project
+/.settings
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+/caches
+/local.properties
+.*.swp
+.DS_Store
+/src/main/resources/application-local.properties
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+src/main/resources/application-local.properties
+src/main/resources/localdev-config.json
