feature: conection to database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 management.endpoints.web.base-path=/
 server.port=${PORT:8080}
 springdoc.show-actuator=true
+spring.datasource.url=jdbc:db2://54a2f15b-5c0f-46df-8954-7e38e612c2bd.c1ogj3sd0tgtu0lqde00.databases.appdomain.cloud:32733/bludb:;sslConnection=true;
+spring.datasource.username=mvs21900
+spring.datasource.password=qi9gvVCGAWYhfwxW
