--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,14 @@
             <version>1.1.2</version>
         </dependency>
         <dependency>
+        	<groupId>org.springframework.boot</groupId>
+        	<artifactId>spring-boot-starter-data-jdbc</artifactId>
+        </dependency>
+        <dependency>
+        	<groupId>com.ibm.db2</groupId>
+        	<artifactId>jcc</artifactId>
+        </dependency>
+        <dependency>
     		<groupId>org.projectlombok</groupId>
     		<artifactId>lombok</artifactId>
        		<scope>provided</scope>
